Change Magento root directory from '/www/project' to '/www/project/src'.

--- a/.docker/nginx/sites-enabled/project.conf
+++ b/.docker/nginx/sites-enabled/project.conf
@@ -7,7 +7,7 @@ server {
     listen 80;
     server_name project-mage.dev;
 
-    set $MAGE_ROOT /www/project;
+    set $MAGE_ROOT /www/project/src;
 
     root $MAGE_ROOT/pub;
 
